[tool.poetry]
name = "ffdraftbuddy"
version = "0.1.0"
description = "Fantasy football draft tool to understand positional advantage and opportunity"
authors = ["Alex Yang <ayang41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
altair = "^5.5.0"
pandas = "^2.3.0"
numpy = "^2.2.6"
streamlit = "^1.45.1"
pytest = "^8.4.0"
jupyterlab = "^4.4.3"
poetry = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
