[tool.poetry]
name = "ffdraftbuddy"
version = "0.1.0"
description = "Fantasy football draft tool to understand positional advantage and opportunity"
authors = ["Alex Yang <ayang41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
altair = "^6.0.0"
pandas = "^2.3.3"
numpy = "^2.2.6"
streamlit = "^1.52.2"
pytest = "^9.0.2"
jupyterlab = "^4.5.1"
poetry = "^2.2.1"
lxml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
